# Scaffold-2DGS

./: .gitignore  README.md  environment.yml  eval_geometry.py  metrics.py  pyproject.toml  render.py  requirement.txt  run.py  summary.py  summary_dtu.py  train.py  train_mip360.py  train_scannetpp.py  vis_outputs.py
arguments/: __init__.py
gaussian_renderer/: __init__.py
preprare_dataset/: convert_gs2ash.py  generate_monodepth.py
process_dataset/: preprocess_scannetpp.py
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
scripts/: train_dtu.py  train_mip360.py  train_scannetpp.py  train_tnt.py
scripts/eval_dtu/: eval.py  evaluate_single_scene.py
torch-ash/: .gitignore
torch-ash/demo/: data_provider.py  eval_mesh.py  eval_mesh_fusion.py  rgbd_fusion.py  train_scene_recon.py  train_scene_recon_pruned.py
tsdffuison_examples/ash-demo/: ash_utils.py
tsdffuison_examples/ash-demo/ash_helpers/: data_provider.py  rgbd_fusion.py
tsdffuison_examples/torch-ash/demo/: data_provider.py  rgbd_fusion.py  train_scene_recon.py
tsdffuison_examples/torch-ash/ext/stdgpu/install/include/stdgpu/: config.h
tsdffuison_examples/tsdf-fusion-python/: fusion.py
utils/: camera_utils.py  mesh_utils.py  svo_utils.py
utils/svo_helpers/: render_helpers.py
