[project]
name = "scaffold-2dgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "einops>=0.8.1",
    "gradio>=5.38.2",
    "gradio-imageslider>=0.0.20",
    "jaxtyping>=0.3.2",
    "laspy>=2.6.1",
    "lpips>=0.1.4",
    "matplotlib>=3.10.3",
    "mediapy>=1.2.4",
    "nerfacc>=0.5.3",
    "nvitop>=1.5.2",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "plyfile==0.8.1",
    "torch<2.4.1",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
    "tqdm>=4.67.1",
    "trimesh>=4.7.1",
    "triton>=3.0.0",
    "wandb>=0.21.0",
    "xformers>=0.0.27.post2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
